--- a/app/src/main/res/layout/fragment_bustracking_volunteer.xml
+++ b/app/src/main/res/layout/fragment_bustracking_volunteer.xml
@@ -42,22 +42,19 @@
 
         <Button
             android:id="@+id/start"
+            android:layout_below="@+id/textInputLayout_routeNo"
+            android:layout_marginTop="30dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="9dp"
-            android:layout_marginTop="239dp"
             android:text="@string/start_volunteering"
             android:textColor="@color/colorAccent" />
 
         <Button
             android:id="@+id/stop"
+            android:layout_below="@+id/textInputLayout_routeNo"
+            android:layout_marginTop="30dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="331dp"
             android:text="@string/stop_volunteering"
             android:textColor="@color/colorAccent" />
 
