--- a/app/src/main/res/layout/fragment_bustracking_map.xml
+++ b/app/src/main/res/layout/fragment_bustracking_map.xml
@@ -15,6 +15,7 @@
 			<TextView
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
+				android:id="@+id/tv_selectbusno"
 				android:layout_gravity="center"
 				android:textAppearance="@style/TextAppearance.AppCompat.Small"
 				android:layout_weight="1.5"
