--- a/app/src/main/res/layout/activity_bustracking.xml
+++ b/app/src/main/res/layout/activity_bustracking.xml
@@ -2,6 +2,7 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:id="@+id/ll_bustracking"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
@@ -116,10 +117,11 @@
         android:singleLine="false"
         android:text="@string/no_volunteer_available"
         android:layout_gravity="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:gravity="center"
+        android:layout_weight="1"
         android:foregroundGravity="center"
-        android:layout_height="wrap_content" />
+        android:layout_height="0dp" />
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/mapView_bustracking"
