--- a/app/src/main/res/drawable/circle_busvolunteer_online.xml
+++ b/app/src/main/res/drawable/circle_busvolunteer_online.xml
@@ -3,6 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/green" />
     <size
-        android:height="@dimen/_14sdp"
-        android:width="@dimen/_14sdp" />
+        android:height="10dp"
+        android:width="10dp" />
 </shape>
