--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -95,17 +95,16 @@
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="30sp"
                             android:layout_gravity="center"
-                            android:contentDescription="Location Sharing: Off"
                             android:src="@drawable/ic_location_on" />
 
                         <ImageButton
                             android:id="@+id/start"
+                            android:visibility="gone"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:layout_marginEnd="30sp"
                             android:background="?android:selectableItemBackground"
-                            android:contentDescription="Location Sharing: On"
                             android:src="@drawable/ic_location_off" />
                     </LinearLayout>
                 </androidx.appcompat.widget.Toolbar>
