--- a/app/src/main/res/layout/activity_map_dark.xml
+++ b/app/src/main/res/layout/activity_map_dark.xml
@@ -91,12 +91,12 @@
 
                         <ImageButton
                             android:id="@+id/stop"
+                            android:visibility="gone"
                             android:background="?android:selectableItemBackground"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="30sp"
                             android:layout_gravity="center"
-                            android:contentDescription="Location Sharing: Off"
                             android:src="@drawable/ic_location_off" />
 
                         <ImageButton
@@ -106,7 +106,6 @@
                             android:layout_gravity="center"
                             android:layout_marginEnd="30sp"
                             android:background="?android:selectableItemBackground"
-                            android:contentDescription="Location Sharing: On"
                             android:src="@drawable/ic_location_on" />
                     </LinearLayout>
                 </androidx.appcompat.widget.Toolbar>
