Fixed concurrency and volunteer internet connection management

--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -90,6 +90,7 @@
 
                         <ImageButton
                             android:id="@+id/start"
+                            android:visibility="gone"
                             android:background="?android:selectableItemBackground"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
