More bug fixes, UI changes

--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -128,7 +128,7 @@
             android:layout_marginBottom="7sp">
 
             <TextView
-                android:id="@+id/tv_volunterid"
+                android:id="@+id/tv_volunteerid"
                 android:fontFamily="@font/open_sans"
                 android:layout_width="wrap_content"
                 android:layout_marginStart="10sp"
