Changed listeners from common listener for all bus info parameters, to one listener for each parameter. Fixed online status changing randomly. TODO: Add notification sound on Android O+

--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -80,6 +80,7 @@
 
                         <ImageView
                             android:id="@+id/iv_busOnlineStatus"
+                            android:tag="offline"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
