--- a/app/src/main/res/layout/activity_map_dark.xml
+++ b/app/src/main/res/layout/activity_map_dark.xml
@@ -173,8 +173,8 @@
 
                                 <ImageButton
                                     android:id="@+id/stop"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
+                                    android:layout_width="48dp"
+                                    android:layout_height="48dp"
                                     android:layout_gravity="center"
                                     android:layout_marginEnd="20dp"
                                     android:background="?android:selectableItemBackground"
@@ -212,6 +212,7 @@
             android:id="@+id/mapView_bus"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:visibility="gone"
             android:layout_weight="1" />
 
         <LinearLayout
@@ -220,8 +221,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:gravity="center"
-            android:orientation="vertical"
-            android:visibility="gone">
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/emptyIV"
@@ -236,7 +236,7 @@
                 android:fontFamily="@font/open_sans"
                 android:text="@string/no_volunteer_available"
                 android:textAlignment="center"
-                android:textColor="@color/yellow"
+                android:textColor="@color/bus_offline_yellow"
                 android:textSize="@dimen/_12ssp" />
         </LinearLayout>
     </LinearLayout>
@@ -246,7 +246,7 @@
         android:id="@+id/fab_recenter"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="@dimen/_30sdp"
-        android:backgroundTint="@color/darkColor"
+        android:backgroundTint="@color/darkColor1"
         android:layout_marginEnd="@dimen/_30sdp"
         android:layout_alignParentEnd="true"
         style="@style/Widget.MaterialComponents.FloatingActionButton"
